# al-hosan-checker

./: .gitignore  .mailmap  README.md  alhosan-release.keystore  build.gradle.kts  gradle.properties  gradlew  pubspec.yaml  settings.gradle.kts
.github/workflows/: badges.yml  build.yml  build_apk.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/al_hosan_checker/: MainActivity.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alhosan/checker/bridge/: RustBridge.kt
app/src/main/java/com/alhosan/checker/data/model/: Subscription.kt
app/src/main/java/com/alhosan/checker/data/repository/: CheckerRepository.kt
app/src/main/java/com/alhosan/checker/ui/: MainActivity.kt
app/src/main/java/com/alhosan/checker/ui/components/: AlHosanComponents.kt  Capturable.kt  UpdateDialog.kt
app/src/main/java/com/alhosan/checker/ui/i18n/: Strings.kt
app/src/main/java/com/alhosan/checker/ui/theme/: Theme.kt  (+1 more)
app/src/main/java/com/alhosan/checker/util/: AppUpdater.kt  ImageExporter.kt  ResultImageRenderer.kt
app/src/main/java/com/alhosan/checker/viewmodel/: CheckerViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
github/workflows/: build.yml
lib/: main.dart
lib/models/: subscription.dart
lib/screens/: login_screen.dart  result_screen.dart
lib/services/: checker_service.dart
rust/: Cargo.toml  build_android.sh
rust/src/: jni_bridge.rs  lib.rs  m3u.rs  xtream.rs
scripts/: update_badges.py
(+4 files in other folders)
